...
                for (j in 0 until MainActivity.mapContent.markerList[i].photoAtCurrentMarker.size){
                    imageArr.add(MainActivity.mapContent.markerList[i].photoAtCurrentMarker[j])
                }
                imageGroups[MainActivity.mapContent.markerList[i]] = imageArr
            }
        }
        Gallery(imageGroups)
    }

    @OptIn(ExperimentalMaterial3Api::class, ExperimentalMaterialApi::class)
    @Composable
    fun Gallery(imageGroups: MutableMap<MarkerInstance, MutableList<PhotoInstance>>) {
        val screenWidth = LocalConfiguration.current.screenWidthDp.dp
...
                    Button(
                        onClick = {
                            Log.d("Gallery", "Icon Button Clicked")
                            showDialog.value = true

                        },
                        modifier = Modifier.size(64.dp).testTag("IconButton"), // Adjust size as needed
                        colors = androidx.compose.material3.ButtonDefaults.buttonColors(
                            containerColor = Color.Transparent
                        )
                    ) {
                        Image(
                            painter = painterResource(id = R.drawable.share), // Replace with actual drawable name
...
            }) {
                Box(
                    modifier = Modifier
                        .size(320.dp)
                        .background(Color.White, shape = RoundedCornerShape(16.dp))
                        .padding(10.dp)
                        .testTag("ShareDialog"),

                    ) {
                    Column(horizontalAlignment = Alignment.CenterHorizontally) {
                        Spacer(Modifier.height(8.dp))
                        Text("Share Photo", fontSize = 24.sp, fontWeight = FontWeight.Bold, modifier = Modifier.align(Alignment.Start))
                        Spacer(Modifier.height(6.dp))
...
                                showDialog.value = false
                            },
                            colors = ButtonDefaults.buttonColors(
                                containerColor = Color.Blue,  // Background color
                                contentColor = Color.White    // Text color
                            ),
                            modifier = Modifier.fillMaxWidth(0.3f).align(Alignment.End).testTag("ShareButton")
                        ) {
                            Text("Share", fontWeight = FontWeight.SemiBold)
                        }
                    }
                }
            }
...
            onExpandedChange = { }
        ) {

            Modifier
                .menuAnchor()
                .fillMaxWidth()
                .testTag("TextInputField")
            FriendTextField(
                state = state,
                modifier = Modifier
                    .menuAnchor()
                    .fillMaxWidth()
                    .testTag("TextInputField")
...
